Adds parallax to floater screen

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               exploration sprints.</h2></div>
             <div class="mb-6 container">      
               <img src="assets/images/data-catalog-1.png"  />               
-            <img  class="floating" src="assets/images/data-catalog-2.png"  />
+            <img  class="floating" id="floater" src="assets/images/data-catalog-2.png"  />
           </div>
         </div>
       </div>
