Fixes to icons + layout

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="container is-max-desktop">
       <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile has-text-black">...But that is not all!</h1>
       <h2 class="subtitle is-size-5-desktop has-text-black">Dataset.at is packed with features that help you save time, and get data project moving at the speed of light ⚡</h2>
-      <nav class="level is-justify-content-center mt-6">
+      <nav class="level is-centered mt-6">
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/shareable-link.png">
@@ -153,7 +153,7 @@
           <div class="content">
             <div class="columns is-vcentered">
               <div class="column is-one-third is-primary">
-                <img class="is-usecase-logo p-4" src="assets/images/community-edition.png" alt="Community-edition">
+                <img class="is-usecase-logo p-4" src="assets/icons/community-edition.png" alt="Community-edition">
               </div>
               <div class="column is-two-third">
                 <h2 class="title is-size-4-touch has-text-black">The global community</h2>
@@ -169,7 +169,7 @@
           <div class="content">
             <div class="columns is-vcentered">
               <div class="column is-one-third is-primary">
-                <img class="is-usecase-logo p-4" src="assets/images/team-edition.png" alt="Team-edition">
+                <img class="is-usecase-logo p-4" src="assets/icons/team-edition.png" alt="Team-edition">
               </div>
               <div class="column is-two-third">
                 <h2 class="title is-size-4-touch has-text-black">The modern data team</h2>
@@ -184,7 +184,7 @@
           <div class="content">
             <div class="columns is-vcentered">
               <div class="column is-one-third is-primary">
-                <img class="is-usecase-logo p-4" src="assets/images/enterprise-edition.png" alt="Enterprise edition">
+                <img class="is-usecase-logo p-4" src="assets/icons/enterprise-edition.png" alt="Enterprise-edition">
               </div>
               <div class="column is-two-third">
                 <h2 class="title is-size-4-touch has-text-black">The enterprise</h2>
