Fix issue with mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
   </section>
   <section class="section is-medium is-white has-text-centered">
     <div class="container is-max-desktop">
-      <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile has-text-black">...But that is not all!</h1>
+      <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile has-text-black">...But that's not all!</h1>
       <h2 class="subtitle is-size-5-desktop has-text-black">Dataset.at is packed with features that help you save time, and get data project moving at the speed of light ⚡</h2>
-      <nav class="level is-centered mt-6">
+      <nav class="level is-justify-content-center mt-6">
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/shareable-link.png">
