Fix mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -72,40 +72,30 @@
   </section>
   <section class="hero bg-1 is-fullheight is-black has-text-centered">
     <div class="container is-max-desktop">
-      <div class="columns is-centered">
-        <div class="column is-five-sixth">
-          <p class="has-text-primary mt-6">Discover data 🔎</p>
-          <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">A data catalog, designed to improve your productivity</h1>
-            <h2 class="subtitle is-light is-size-5-desktop">With Dataset.at you can find, understand and access the trustworthy
-              data you are looking for, without having to jump on endless data
-              exploration sprints.</h2></div>
-            <div class="mb-6 container">      
-              <img src="assets/images/data-catalog-1.png"  />               
-            <img  class="floating" id="floater" src="assets/images/data-catalog-2.png"  />
-          </div>
-        </div>
+      <p class="has-text-primary mt-6">Discover data 🔎</p>
+      <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">A data catalog, designed to improve your productivity</h1>
+        <h2 class="subtitle is-light is-size-5-desktop">With Dataset.at you can find, understand and access the trustworthy
+          data you are looking for, without having to jump on endless data
+          exploration sprints.</h2></div>
+        <div class="mb-6 container">      
+          <img src="assets/images/data-catalog-1.png"  />               
+        <img  class="floating" id="floater" src="assets/images/data-catalog-2.png"  />
       </div>
     </div>
   </section>
 
-  <section class="hero is-fullheight is-white has-text-centered">
+  <section class="hero bg-1 is-fullheight is-white has-text-centered">
     <div class="container is-max-desktop">
-      <div class="columns is-centered">
-        <div class="column is-five-sixth">
-          <p class="has-text-primary mt-6">Work together</p>
-          <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">The future of data work is real-time and collaborative
-          </h1>
-            <h2 class="subtitle is-size-5-desktop">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
-              discussing the data with others, plus a direct line to data owners
-              through access request notifications, will set you and your team's
-              productivity on fire. 🔥
-            </h2>
-            <a class="button is-primary is-outlined" href="#">Read more about our collaborative features</a>
-          </div>
-            <div class="mb-6 container">      
-              <img src="assets/images/data-workspace-1.png"  />               
-          </div>
+      <p class="has-text-primary mt-6">Work together</p>
+      <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">The future of data work is real-time and collaborative</h1>
+        <h2 class="subtitle is-light is-size-5-desktop">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
+          discussing the data with others, plus a direct line to data owners
+          through access request notifications, will set you and your team's
+          productivity on fire. 🔥</h2>
+          <a class="button is-primary is-outlined" href="#">Read more</a>
         </div>
+        <div class="mb-6 container">      
+          <img src="assets/images/data-workspace-1.png"  />               
       </div>
     </div>
   </section>
@@ -202,45 +192,37 @@
   </section>
   <section class="hero is-large is-black has-text-centered">
     <div class="container is-max-desktop">
-      <div class="columns is-centered">
-        <div class="column is-five-sixth">
-          <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">Reserve your username before it's gone to claim your early community access</h1>
-            <h2 class="subtitle is-light is-size-5-desktop">We are continously opening up new slots for our beta and upcoming community launch</h2></div>
-              <div class="pt-5 container"
-              ><div class="field has-addons is-justify-content-center">
-               <p class="control">
-                 <a class="button is-static">
-                   dataset.at/
-                 </a>
-               </p>
-               <p class="control">
-                 <input id="username2" class="input" type="text" placeholder="johndoe">
-               </p>
-               <div class="control">
-                 <a class="button footer-claim-button is-primary">
-                   Claim
-                 </a>
-               </div>
-             </div>
-            <div class="container mt-6">      
-              <img src="assets/images/profile-page.png"  />        
+      <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">Reserve your username before it's gone to claim your early community access</h1>
+        <h2 class="subtitle is-light is-size-5-desktop">We are continously opening up new slots for our beta and upcoming community launch</h2></div>
+          <div class="pt-5 container"
+          ><div class="field has-addons is-justify-content-center">
+            <p class="control">
+              <a class="button is-static">
+                dataset.at/
+              </a>
+            </p>
+            <p class="control">
+              <input id="username2" class="input" type="text" placeholder="johndoe">
+            </p>
+            <div class="control">
+              <a class="button footer-claim-button is-primary">
+                Claim
+              </a>
+            </div>
           </div>
-        </div>
-      </div>
+        <div class="container mt-6">      
+          <img src="assets/images/profile-page.png"  />        
+      </div>  
     </div>
   </section>
   <footer class="section bg-2 has-background-black is-small has-text-centered">
     <div class="container"><a class="logo" href="/"><img src="assets/logos/dataset-logo-light.svg" alt="Dataset | The front page of your datasets 🚀" style="color:white;" height="48"></a>
-      <div class="columns is-centered">
-        <div class="column">
-          <h2 class="subtitle mt-2 is-size-5-desktop is-light">Follow us to get the latest news</h2>
-          <a href="https://twitter.com/datasetHQ" target="_blank" class="icon-button twitter"><i class="fab fa-twitter"></i><span></span></a>
-          <a href="#" target="_blank" class="icon-button linkedin"><i class="fab fa-linkedin"></i><span></span></a>
-          <a href="#" target="_blank" class="icon-button medium"><i class="fab fa-medium"></i><span></span></a>
-          <a href="#" target="_blank" class="icon-button discord"><i class="fab fa-discord"></i><span></span></a>
-          <a href="mailto:philip@dataset.at" target="_blank" class="icon-button email"><i class="far fa-envelope"></i><span></span></a>
-        </div>
-      </div>
+      <h2 class="subtitle mt-2 is-size-5-desktop is-light">Follow us to get the latest news</h2>
+      <a href="https://twitter.com/datasetHQ" target="_blank" class="icon-button twitter"><i class="fab fa-twitter"></i><span></span></a>
+      <a href="#" target="_blank" class="icon-button linkedin"><i class="fab fa-linkedin"></i><span></span></a>
+      <a href="#" target="_blank" class="icon-button medium"><i class="fab fa-medium"></i><span></span></a>
+      <a href="#" target="_blank" class="icon-button discord"><i class="fab fa-discord"></i><span></span></a>
+      <a href="mailto:philip@dataset.at" target="_blank" class="icon-button email"><i class="far fa-envelope"></i><span></span></a>
       <p class="is-size-8-desktop is-light">© Dataset 2022</h2>
   </footer>
   <script src="js/script.js"></script>
