--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <div class="navbar-menu">
         <div class="navbar-end">
           <div class="navbar-item">
-            <p>Want beta?</p>
+            <!-- <p class="has-text-grey-light">Interested in shaping </p> -->
           </div>
-          <div class="navbar-item"><a class="button is-primary is-outlined early-access-button" >Get early access</a></div>
+          <div class="navbar-item"><a class="button is-primary is-outlined early-access-button">Get early access</a></div>
         </div>
       </div>
     </div>
@@ -46,8 +46,8 @@
   <section class="hero p-0 is-black is-fullheight has-text-centered">
     <div class="hero-body pt-0">
       <div class="container is-max-desktop">
-            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">The front page of your <br /> <span class="word"></span> <span class="gradient-text">data</span></h1>
-            <h2 class="subtitle is-size-4-desktop">Discover, collaborate & operate on data, with ease
+            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">The New Standard for <br /> <span class="word"></span> <span class="gradient-text">Datasets</span></h1>
+            <h2 class="subtitle has-text-grey-light is-size-4 is-size-5-mobile">Dataset.at is the next-generation data workspace for professionals and teams.
             </h2>
              <div class="pt-6 container"
              ><div class="field has-addons is-justify-content-center">
@@ -65,68 +65,72 @@
                 </a>
               </div>
             </div>
-            <p class="mt-5">Grab your username before it's gone and join the waitlist to get early access.</p>
+            <p class="mt-5 has-text-grey-light">Grab your username before it's gone and join the waitlist to get early access.</p>
           </div>
       </div>
     </div>
   </section>
   <section class="hero bg-1 is-fullheight is-black has-text-centered">
-    <div class="container is-max-desktop">
-      <p class="has-text-primary mt-6">Discover data 🔎</p>
-      <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">A data catalog, designed to improve your productivity</h1>
-        <h2 class="subtitle is-light is-size-5-desktop">With Dataset.at you can find, understand and access the trustworthy
-          data you are looking for, without having to jump on endless data
-          exploration sprints.</h2></div>
-        <div class="mb-6 container">      
-          <img src="assets/images/data-catalog-1.png"  />               
-        <img  class="floating" id="floater" src="assets/images/data-catalog-2.png"  />
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <p class="has-text-primary mt-6">Discover data 🔎</p>
+        <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">A data catalog, designed to improve your productivity</h1>
+          <h2 class="subtitle has-text-grey-light is-size-6">With Dataset.at you can find, understand and access the trustworthy
+            data you are looking for, without having to jump on endless data
+            exploration sprints.</h2></div>
+          <div class="mb-6 container">      
+            <img src="assets/images/data-catalog-1.png"  />               
+          <img  class="floating" id="floater" src="assets/images/data-catalog-2.png"  />
+        </div>
       </div>
-    </div>
+    </div>  
   </section>
 
-  <section class="hero bg-1 is-fullheight is-white has-text-centered">
-    <div class="container is-max-desktop">
-      <p class="has-text-primary mt-6">Work together</p>
-      <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">The future of data work is real-time and collaborative</h1>
-        <h2 class="subtitle is-light is-size-5-desktop">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
-          discussing the data with others, plus a direct line to data owners
-          through access request notifications, will set you and your team's
-          productivity on fire. 🔥</h2>
-          <a class="button is-primary is-outlined" href="#">Read more</a>
+  <section class="hero is-fullheight is-white has-text-centered">
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <p class="has-text-primary mt-6">Work together</p>
+        <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">The future of data work is real-time and collaborative</h1>
+          <h2 class="subtitle has-text-grey-dark is-size-6">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
+            discussing the data with others, plus a direct line to data owners
+            through access request notifications, will set you and your team's
+            productivity on fire. 🔥</h2>
+            <a class="button is-primary is-outlined" href="#">Read more</a>
+          </div>
+          <div class="mb-6 container">      
+            <img src="assets/images/data-workspace-1.png"  />               
         </div>
-        <div class="mb-6 container">      
-          <img src="assets/images/data-workspace-1.png"  />               
       </div>
-    </div>
+  </div>  
   </section>
   <section class="section is-medium is-white has-text-centered">
     <div class="container is-max-desktop">
-      <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile has-text-black">...But that's not all!</h1>
-      <h2 class="subtitle is-size-5-desktop has-text-black">Dataset.at is packed with features that help you save time, and get data project moving at the speed of light ⚡</h2>
+      <h1 class="title is-spaced is-size-2 is-size-3-mobile">...But that's not all!</h1>
+      <h2 class="subtitle is-size-6 has-text-grey-dark"">Dataset.at is packed with features that help you save time, and get data project moving at the speed of light ⚡</h2>
       <nav class="level is-justify-content-center mt-6">
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/shareable-link.png">
-            <p class="has-text-weight-bold mt-4 has-text-black">Sharable, unique link for all datasets</p>
+            <p class="mt-4 has-text-grey-dark">Sharable, unique link for all datasets</p>
           </div>
         </div>
         <div class="level-item features has-text-centered">
           <div>
             <img src="assets/images/automated-tags.png">
-            <p class="has-text-weight-bold mt-4 has-text-black">Automated meta-data enrichment & powerful search</p>
+            <p class="mt-4 has-text-grey-dark"">Automated meta-data enrichment & powerful search</p>
           </div>
         </div>
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/automated-data-quality.png">
-            <p class="has-text-weight-bold mt-4 has-text-black">Automated Data Quality, Privacy & Utility Score
+            <p class="mt-4 has-text-grey-dark">Automated Data Quality, Privacy & Utility Score
             </p>
           </div>
         </div>
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/privacy-feature.png">
-          <p class="has-text-weight-bold mt-4 has-text-black">Dataset privacy & wrangling studio, coming soon....</p>
+          <p class="mt-4 has-text-grey-dark"">Dataset privacy & wrangling studio, coming soon....</p>
           </div>
         </div>
        
@@ -137,8 +141,8 @@
   </section>
   <section class="section is-white has-text-centered">
     <div class="container is-max-desktop">
-      <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile has-text-black">Who is dataset for?</h1>
-      <div class="card">
+      <h1 class="title is-spaced is-size-2 is-size-3-mobile">Who is dataset for?</h1>
+      <div class="card pt-6 pb-6 mb-2">
         <div class="card-content">
           <div class="content">
             <div class="columns is-vcentered">
@@ -146,15 +150,15 @@
                 <img class="is-usecase-logo p-4" src="assets/icons/community-edition.png" alt="Community-edition">
               </div>
               <div class="column is-two-third">
-                <h2 class="title is-size-4-touch has-text-black">The global community</h2>
-                <p class="has-text-black">Curate, Share or access high quality datasets hosted by the global open-source community all-in-one place.</p>
+                <h2 class="title is-size-4 is-size-5-mobile has-text-black">The global community</h2>
+                <p class="has-text-grey-dark">Curate, Share or access high quality datasets hosted by the global open-source community all-in-one place.</p>
                 <a class="button is-primary is-outlined" href="#">Free individual access</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="card">
+      <div class="card pt-6 pb-6 mb-2">
         <div class="card-content">
           <div class="content">
             <div class="columns is-vcentered">
@@ -162,14 +166,14 @@
                 <img class="is-usecase-logo p-4" src="assets/icons/team-edition.png" alt="Team-edition">
               </div>
               <div class="column is-two-third">
-                <h2 class="title is-size-4-touch has-text-black">The modern data team</h2>
-                <p class="has-text-black">Spin up virtual workspaces and collaborate effortlessly with team members around any type of data projects with chat, documentation & more built in.</p>  <a class="button is-primary is-outlined" href="#">Inquiry team edition</a>
+                <h2 class="title is-size-4 is-size-5-mobile has-text-black">The modern data team</h2>
+                <p class="has-text-grey-dark">Spin up virtual workspaces and collaborate effortlessly with team members around any type of data projects with chat, documentation & more built in.</p>  <a class="button is-primary is-outlined" href="#">Inquiry team edition</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="card">
+      <div class="card pt-6 pb-6">
         <div class="card-content">
           <div class="content">
             <div class="columns is-vcentered">
@@ -177,8 +181,8 @@
                 <img class="is-usecase-logo p-4" src="assets/icons/enterprise-edition.png" alt="Enterprise-edition">
               </div>
               <div class="column is-two-third">
-                <h2 class="title is-size-4-touch has-text-black">The enterprise</h2>
-                <p class="has-text-black">Create sample stores and central data repositories to help
+                <h2 class="title is-size-4 is-size-5-mobile has-text-black">The enterprise</h2>
+                <p class="has-text-grey-dark">Create sample stores and central data repositories to help
                   everyone find and access the data they need. Use all of your
                   organization’s data without having to worry about data quality,
                   compliance, or data governance ever again.</p>
@@ -190,40 +194,42 @@
       </div>
     </div>
   </section>
-  <section class="hero is-large is-black has-text-centered">
-    <div class="container is-max-desktop">
-      <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-3-desktop is-light is-size-4-mobile">Reserve your username before it's gone to claim your early community access</h1>
-        <h2 class="subtitle is-light is-size-5-desktop">We are continously opening up new slots for our beta and upcoming community launch</h2></div>
-          <div class="pt-5 container"
-          ><div class="field has-addons is-justify-content-center">
-            <p class="control">
-              <a class="button is-static">
-                dataset.at/
-              </a>
-            </p>
-            <p class="control">
-              <input id="username2" class="input" type="text" placeholder="johndoe">
-            </p>
-            <div class="control">
-              <a class="button footer-claim-button is-primary">
-                Claim
-              </a>
+  <section class="hero is-small is-black has-text-centered">
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">Reserve your username before it's gone to claim your early community access</h1>
+          <h2 class="subtitle has-text-grey-light is-size-6">We are continously opening up new slots for our beta and upcoming community launch</h2></div>
+            <div class="pt-5 container"
+            ><div class="field has-addons is-justify-content-center">
+              <p class="control">
+                <a class="button is-static">
+                  dataset.at/
+                </a>
+              </p>
+              <p class="control">
+                <input id="username2" class="input" type="text" placeholder="johndoe">
+              </p>
+              <div class="control">
+                <a class="button footer-claim-button is-primary">
+                  Claim
+                </a>
+              </div>
             </div>
-          </div>
-        <div class="container mt-6">      
-          <img src="assets/images/profile-page.png"  />        
-      </div>  
+          <div class="container mt-6">      
+            <img src="assets/images/profile-page.png"  />        
+        </div>  
+      </div>
     </div>
   </section>
-  <footer class="section bg-2 has-background-black is-small has-text-centered">
+  <footer class="section has-background-black is-small has-text-centered">
     <div class="container"><a class="logo" href="/"><img src="assets/logos/dataset-logo-light.svg" alt="Dataset | The front page of your datasets 🚀" style="color:white;" height="48"></a>
-      <h2 class="subtitle mt-2 is-size-5-desktop is-light">Follow us to get the latest news</h2>
+      <h2 class="subtitle mt-2 is-size-5-desktop has-text-grey-light">Follow us to get the latest news</h2>
       <a href="https://twitter.com/datasetHQ" target="_blank" class="icon-button twitter"><i class="fab fa-twitter"></i><span></span></a>
       <a href="#" target="_blank" class="icon-button linkedin"><i class="fab fa-linkedin"></i><span></span></a>
       <a href="#" target="_blank" class="icon-button medium"><i class="fab fa-medium"></i><span></span></a>
       <a href="#" target="_blank" class="icon-button discord"><i class="fab fa-discord"></i><span></span></a>
       <a href="mailto:philip@dataset.at" target="_blank" class="icon-button email"><i class="far fa-envelope"></i><span></span></a>
-      <p class="is-size-8-desktop is-light">© Dataset 2022</h2>
+      <p class="is-size-8-desktop has-text-grey-light">© Dataset 2022</h2>
   </footer>
   <script src="js/script.js"></script>
 
