--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section class="hero p-0 is-black is-fullheight has-text-centered">
     <div class="hero-body pt-0">
       <div class="container is-max-desktop">
-            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">The New Standard for <br /> <span class="word"></span> <span class="gradient-text">Datasets</span></h1>
+            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">The new standard for <br /> <span class="word"></span> <span class="gradient-text">datasets</span></h1>
             <h2 class="subtitle has-text-grey-light is-size-4 is-size-5-mobile">Dataset.at is the next-generation data workspace for professionals and teams.
             </h2>
              <div class="pt-6 container"
