--- a/index.html
+++ b/index.html
@@ -89,16 +89,28 @@
   <section class="hero is-fullheight is-white has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <p class="has-text-primary mt-6">Work together</p>
+        <p class="has-text-primary mt-6">Work together ✨</p>
         <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">The future of data work is real-time and collaborative</h1>
           <h2 class="subtitle has-text-grey-dark is-size-6">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
             discussing the data with others, plus a direct line to data owners
             through access request notifications, will set you and your team's
-            productivity on fire. 🔥</h2>
-            <a class="button is-primary is-outlined" href="#">Read more</a>
+            productivity on fire.</h2>
           </div>
           <div class="mb-6 container">      
             <img src="assets/images/data-workspace-1.png"  />               
+        </div>
+      </div>
+  </div>  
+  </section>
+  <section class="hero is-fullheight is-white has-text-centered">
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <p class="has-text-primary mt-6">Communtiy 🌍</p>
+        <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">The largest free and commercial dataset library</h1>
+          <h2 class="subtitle has-text-grey-dark is-size-6">One of the first endeavors has been to curate the best and most trusted datasets so data scientists can quickly discover them. Curate, share or access high quality datasets hosted by the global open-source community all in one place.</h2>
+          </div>
+          <div class="mb-6 container">      
+            <img src="assets/images/community-data.svg"  />               
         </div>
       </div>
   </div>  
@@ -133,10 +145,7 @@
           <p class="mt-4 has-text-grey-dark"">Dataset privacy & wrangling studio, coming soon....</p>
           </div>
         </div>
-       
       </nav>
-      <a class="button is-primary is-outlined mt-6" href="#">Roadmap (Coming soon)</a>
-
     </div>
   </section>
   <section class="section is-white has-text-centered">
