--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dataset | The front page of your datasets</title>
-  <meta name="description" content="With Dataset.at you can find, understand and access the trustworthy data you are looking for, without having to jump on endless data">
+  <meta name="description" content="With Dataset.at you can find, understand and access the trustworthy data you are looking for, without having to jump on endless data sprints.">
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Dataset | The front page of your datasets 🚀">
+  <meta property="og:title" content="Dataset | The new standard for your datasets 🚀">
   <meta property="og:description" content="With Dataset.at you can find, understand and access the trustworthy data you are looking for, without having to jump on endless data">
   <meta property="og:image" content="https://dataset.at/assets/images/dataset-opengraph.jpg">
   <meta property="og:url" content="https://dataset.at">
-  <meta name="twitter:title" content="Dataset | The front page of your datasets 🚀">
-  <meta name="twitter:description" content="With Dataset.at you can find, understand and access the trustworthy data you are looking for, without having to jump on endless data">
+  <meta name="twitter:title" content="Dataset | The new standard for your datasets 🚀">
+  <meta name="twitter:description" content="With Dataset.at you can find, understand and access the trustworthy data you are looking for, without having to jump on endless data sprints.">
   <meta name="twitter:image" content="https://dataset.at/assets/images/dataset-opengraph.jpg">
   <meta name="twitter:site" content="@datasetHQ">
   <meta name="twitter:creator" content="@datasetHQ">
@@ -35,7 +35,7 @@
       <div class="navbar-menu">
         <div class="navbar-end">
           <div class="navbar-item">
-            <!-- <p class="has-text-grey-light">Interested in shaping </p> -->
+            <!-- <p class="has-text-grey-light"></p> -->
           </div>
           <div class="navbar-item"><a class="button is-primary is-outlined early-access-button">Get early access</a></div>
         </div>
