--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dataset | The front page of your datasets</title>
-  <meta name="description" content="With Dataset.at you can find, understand and access the trustworthy data you are looking for, without having to jump on endless data sprints.">
+  <title>Dataset | The new standard for your datasets 🚀</title>
+  <meta name="description" content="Dataset.at is the next-generation data workspace for professionals and teams">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Dataset | The new standard for your datasets 🚀">
-  <meta property="og:description" content="With Dataset.at you can find, understand and access the trustworthy data you are looking for, without having to jump on endless data">
+  <meta property="og:description" content="Dataset.at is the next-generation data workspace for professionals and teams">
   <meta property="og:image" content="https://dataset.at/assets/images/dataset-opengraph.jpg">
   <meta property="og:url" content="https://dataset.at">
   <meta name="twitter:title" content="Dataset | The new standard for your datasets 🚀">
-  <meta name="twitter:description" content="With Dataset.at you can find, understand and access the trustworthy data you are looking for, without having to jump on endless data sprints.">
+  <meta name="twitter:description" content="Dataset.at is the next-generation data workspace for professionals and teams">
   <meta name="twitter:image" content="https://dataset.at/assets/images/dataset-opengraph.jpg">
   <meta name="twitter:site" content="@datasetHQ">
   <meta name="twitter:creator" content="@datasetHQ">
@@ -23,6 +23,15 @@
   <link rel="icon" type="image/png" href="https://dataset.at/fav.png"/>
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XPVSH0E21P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XPVSH0E21P');
+</script>
 </head>
 <body>
   <nav class="navbar is-black" role="navigation" aria-label="main navigation">
