--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Dataset | The new standard for your datasets 🚀">
   <meta property="og:description" content="Dataset.at is the next-generation data workspace for professionals and teams">
-  <meta property="og:image" content="https://dataset.at/assets/images/dataset-opengraph.jpg">
+  <meta property="og:image" content="https://dataset.at/assets/images/dataset-opengraph.png">
   <meta property="og:url" content="https://dataset.at">
   <meta name="twitter:title" content="Dataset | The new standard for your datasets 🚀">
   <meta name="twitter:description" content="Dataset.at is the next-generation data workspace for professionals and teams">
-  <meta name="twitter:image" content="https://dataset.at/assets/images/dataset-opengraph.jpg">
+  <meta name="twitter:image" content="https://dataset.at/assets/images/dataset-opengraph.png">
   <meta name="twitter:site" content="@datasetHQ">
   <meta name="twitter:creator" content="@datasetHQ">
   <meta name="robots" content="index, follow">
