Adjustments to buttons + Adds form links

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <div class="column is-two-third">
                 <h2 class="title is-size-4 is-size-5-mobile has-text-black">The global community</h2>
                 <p class="has-text-grey-dark">Curate, Share or access high quality datasets hosted by the global open-source community all-in-one place.</p>
-                <a class="button is-primary is-outlined" href="#">Free individual access</a>
+                <a class="button is-primary is-outlined early-access-button-bottom">Get early access for free</a>
               </div>
             </div>
           </div>
@@ -185,7 +185,7 @@
               </div>
               <div class="column is-two-third">
                 <h2 class="title is-size-4 is-size-5-mobile has-text-black">The modern data team</h2>
-                <p class="has-text-grey-dark">Spin up virtual workspaces and collaborate effortlessly with team members around any type of data projects with chat, documentation & more built in.</p>  <a class="button is-primary is-outlined" href="#">Inquiry team edition</a>
+                <p class="has-text-grey-dark">Spin up virtual workspaces and collaborate effortlessly with team members around any type of data projects with chat, documentation & more built in.</p>  <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Inquiry pro edition</a>
               </div>
             </div>
           </div>
@@ -204,7 +204,7 @@
                   everyone find and access the data they need. Use all of your
                   organization’s data without having to worry about data quality,
                   compliance, or data governance ever again.</p>
-                  <a class="button is-primary is-outlined" href="#">Inquiry enterprise edition</a>
+                  <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Inquiry pro edition</a>
               </div>
             </div>
           </div>
