Typos and remove buttons

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <section class="hero is-fullheight is-white has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <p class="has-text-primary mt-6">Communtiy 🌍</p>
+        <p class="has-text-primary mt-6">Community 🌍</p>
         <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">The largest free and commercial dataset library</h1>
           <h2 class="subtitle has-text-grey-dark is-size-6">One of the first endeavors has been to curate the best and most trusted datasets so data scientists can quickly discover them. Curate, share or access high quality datasets hosted by the global open-source community all in one place.</h2>
           </div>
@@ -240,12 +240,12 @@
     </div>
   </section>
   <footer class="section has-background-black is-small has-text-centered">
-    <div class="container"><a class="logo" href="/"><img src="assets/logos/dataset-logo-light.svg" alt="Dataset | The front page of your datasets 🚀" style="color:white;" height="48"></a>
+    <div class="container"><a class="logo" href="/"><img src="assets/logos/dataset-logo-light.svg" alt="Dataset | The new standard for your datasets 🚀" style="color:white;" height="48"></a>
       <h2 class="subtitle mt-2 is-size-5-desktop has-text-grey-light">Follow us to get the latest news</h2>
       <a href="https://twitter.com/datasetHQ" target="_blank" class="icon-button twitter"><i class="fab fa-twitter"></i><span></span></a>
-      <a href="#" target="_blank" class="icon-button linkedin"><i class="fab fa-linkedin"></i><span></span></a>
-      <a href="#" target="_blank" class="icon-button medium"><i class="fab fa-medium"></i><span></span></a>
-      <a href="#" target="_blank" class="icon-button discord"><i class="fab fa-discord"></i><span></span></a>
+      <!-- <a href="#" target="_blank" class="icon-button linkedin"><i class="fab fa-linkedin"></i><span></span></a> -->
+      <!-- <a href="#" target="_blank" class="icon-button medium"><i class="fab fa-medium"></i><span></span></a> -->
+      <!-- <a href="#" target="_blank" class="icon-button discord"><i class="fab fa-discord"></i><span></span></a> -->
       <a href="mailto:philip@dataset.at" target="_blank" class="icon-button email"><i class="far fa-envelope"></i><span></span></a>
       <p class="is-size-8-desktop has-text-grey-light">© Dataset 2022</h2>
   </footer>
