--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <div class="navbar-menu">
         <div class="navbar-end">
           <div class="navbar-item">
-            <!-- <p class="has-text-grey-light"></p> -->
+            <a class="button is-primary is-outlined" href="https://app.dataset.at/auth/login" target="_blank">Login</a>
           </div>
-          <div class="navbar-item"><a class="button is-primary is-outlined early-access-button">Get early access</a></div>
+          <div class="navbar-item"><a class="button is-primary early-access-button">Get early access</a></div>
         </div>
       </div>
     </div>
