--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
         <div class="level-item features has-text-centered">
           <div>
             <img src="assets/images/automated-tags.png">
-            <p class="mt-4 has-text-grey-dark"">Automated meta-data enrichment & powerful search</p>
+            <p class="mt-4 has-text-grey-dark"">Meta-data enrichment & powerful search</p>
           </div>
         </div>
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/automated-data-quality.png">
-            <p class="mt-4 has-text-grey-dark">Automated Data Quality, Privacy & Utility Score
+            <p class="mt-4 has-text-grey-dark">Data Quality, Privacy & Utility Scores
             </p>
           </div>
         </div>
