--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
   gtag('config', 'G-XPVSH0E21P');
 </script>
 </head>
-<body>
+<body style="background-color: black;">
   <nav class="navbar is-black" role="navigation" aria-label="main navigation">
-    <div class="container is-widescreen">
       <div class="navbar-brand">
-        <a class="navbar-item" href="/">
-          <img src="assets/logos/dataset-logo-light.svg" alt="Dataset | The front page of your datasets 🚀" height="48">
+        <a class="navbar-item" href="https://dataset.at">
+          <img src="assets/logos/dataset-logo-light.svg" alt="Dataset | The front page of your datasets 🚀" >
         </a>
       </div>
       <div class="navbar-menu">
@@ -49,7 +48,6 @@
           <div class="navbar-item"><a class="button is-primary early-access-button">Get early access</a></div>
         </div>
       </div>
-    </div>
     </div>
   </nav>
   <section class="hero p-0 is-black is-fullheight has-text-centered">
