--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   gtag('config', 'G-XPVSH0E21P');
 </script>
 </head>
-<body style="background-color: black;">
-  <nav class="navbar is-black" role="navigation" aria-label="main navigation">
+<body>
+  <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="https://dataset.at">
           <img src="assets/logos/dataset-logo-light.svg" alt="Dataset | The front page of your datasets 🚀" >
