--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </div>
     </div>
   </nav>
-  <section class="hero p-0 is-black is-fullheight has-text-centered">
-    <div class="hero-body pt-0">
+  <section class="hero is-black is-fullheight has-text-centered">
+    <div class="hero-body">
       <div class="container is-max-desktop">
             <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">The new standard for <br /> <span class="word"></span> <span class="gradient-text">datasets</span></h1>
             <h2 class="subtitle has-text-grey-light is-size-4 is-size-5-mobile">Dataset.at is the next-generation data workspace for professionals and teams.
@@ -80,8 +80,8 @@
   <section class="hero bg-1 is-fullheight is-black has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <p class="has-text-primary mt-6">Discover data 🔎</p>
-        <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">A data catalog, designed to improve your productivity</h1>
+        <h1 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Discovery</h1>
+        <div class="container pt-3 pb-3"> <h1 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Find data 10x faster</h1>
           <h2 class="subtitle has-text-grey-light is-size-6">With Dataset.at you can find, understand and access the trustworthy
             data you are looking for, without having to jump on endless data
             exploration sprints.</h2></div>
@@ -96,7 +96,7 @@
   <section class="hero is-fullheight is-white has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <p class="has-text-primary mt-6">Work together ✨</p>
+        <h1 class="has-text-primary mt-6">Work together ✨</h1>
         <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">The future of data work is real-time and collaborative</h1>
           <h2 class="subtitle has-text-grey-dark is-size-6">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
             discussing the data with others, plus a direct line to data owners
