--- a/index.html
+++ b/index.html
@@ -80,15 +80,14 @@
   <section class="hero bg-1 is-fullheight is-black has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <h1 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Discovery</h1>
-        <div class="container pt-3 pb-3"> <h1 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Find data 10x faster</h1>
-          <h2 class="subtitle has-text-grey-light is-size-6">With Dataset.at you can find, understand and access the trustworthy
+        <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Discovery</h3>
+        <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Find data 10x faster</h4>
+          <p class="subtitle has-text-grey-light is-size-6">With Dataset.at you can find, understand and access the trustworthy
             data you are looking for, without having to jump on endless data
-            exploration sprints.</h2></div>
-          <div class="mb-6 container">      
+            exploration sprints.</p>
+          </div>
             <img src="assets/images/data-catalog-1.png"  />               
           <img  class="floating" id="floater" src="assets/images/data-catalog-2.png"  />
-        </div>
       </div>
     </div>  
   </section>
@@ -96,29 +95,25 @@
   <section class="hero is-fullheight is-white has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <h1 class="has-text-primary mt-6">Work together ✨</h1>
-        <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">The future of data work is real-time and collaborative</h1>
-          <h2 class="subtitle has-text-grey-dark is-size-6">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
+        <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Collaboration</h3>
+        <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">The future of data work is real-time and collaborative</h4>
+          <p class="subtitle has-text-grey-dark is-size-6">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
             discussing the data with others, plus a direct line to data owners
             through access request notifications, will set you and your team's
-            productivity on fire.</h2>
+            productivity on fire.</p>
           </div>
-          <div class="mb-6 container">      
             <img src="assets/images/data-workspace-1.png"  />               
-        </div>
       </div>
   </div>  
   </section>
   <section class="hero is-fullheight is-white has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <p class="has-text-primary mt-6">Community 🌍</p>
-        <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">The largest free and commercial dataset library</h1>
-          <h2 class="subtitle has-text-grey-dark is-size-6">One of the first endeavors has been to curate the best and most trusted datasets so data scientists can quickly discover them. Curate, share or access high quality datasets hosted by the global open-source community all in one place.</h2>
+        <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Community</h3>
+        <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">The largest free and commercial dataset library</h4>
+          <p class="subtitle has-text-grey-dark is-size-6">One of the first endeavors has been to curate the best and most trusted datasets so data scientists can quickly discover them. Curate, share or access high quality datasets hosted by the global open-source community all in one place.</p>
           </div>
-          <div class="mb-6 container">      
             <img src="assets/images/community-data.svg"  />               
-        </div>
       </div>
   </div>  
   </section>
