--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="hero-body">
       <div class="container is-max-desktop">
         <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Collaboration</h3>
-        <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">The future of data work is real-time and collaborative</h4>
+        <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Discuss, document and build</h4>
           <p class="subtitle has-text-grey-dark is-size-6">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
             discussing the data with others, plus a direct line to data owners
             through access request notifications, will set you and your team's
@@ -110,7 +110,7 @@
     <div class="hero-body">
       <div class="container is-max-desktop">
         <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Community</h3>
-        <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">The largest free and commercial dataset library</h4>
+        <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Access 7000+ datasets</h4>
           <p class="subtitle has-text-grey-dark is-size-6">One of the first endeavors has been to curate the best and most trusted datasets so data scientists can quickly discover them. Curate, share or access high quality datasets hosted by the global open-source community all in one place.</p>
           </div>
             <img src="assets/images/community-data.svg"  />               
@@ -119,8 +119,8 @@
   </section>
   <section class="section is-medium is-white has-text-centered">
     <div class="container is-max-desktop">
-      <h1 class="title is-spaced is-size-2 is-size-3-mobile">...But that's not all!</h1>
-      <h2 class="subtitle is-size-6 has-text-grey-dark"">Dataset.at is packed with features that help you save time, and get data project moving at the speed of light ⚡</h2>
+       <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">...But that's not all!</h4>
+       <p class="subtitle has-text-grey-dark is-size-6">Dataset.at is packed with features that help you save time, and get data project moving at the speed of light ⚡</p>
       <nav class="level is-justify-content-center mt-6">
         <div class="level-item features has-text-centered">
           <div>
@@ -152,7 +152,7 @@
   </section>
   <section class="section is-white has-text-centered">
     <div class="container is-max-desktop">
-      <h1 class="title is-spaced is-size-2 is-size-3-mobile">Who is dataset for?</h1>
+      <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Who is dataset for?</h4>
       <div class="card pt-6 pb-6 mb-2">
         <div class="card-content">
           <div class="content">
